--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "sdk-node-neochat",
   "version": "1.0.3",
-  "main": "index.js",
+  "main": "dist/index.js", 
+  "types": "dist/index.d.ts", 
   "scripts": {
     "dev": "ts-node src/dev.ts",
     "clean": "rm -rf dist",
