--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sdk-node-neochat",
+  "name": "@neocoode/sdk-neochat",
   "version": "1.0.8",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
