--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@neocoode/sdk-neochat",
-  "version": "1.0.11",
-  "main": "dist/index.ts",
+  "version": "1.0.12",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "dev": "ts-node src/dev.ts",
